Tenancy entity and reference it to Application User entity